--- a/css/style.css
+++ b/css/style.css
@@ -248,8 +248,8 @@ ul > li > a:hover{
     margin-top: 30px;
     margin-bottom: 30px;
     
-    width: max-content;
-    height: max-content;
+    width: 300px;
+    height: 340px;
     
 
 }
@@ -273,6 +273,11 @@ ul > li > a:hover{
     height: 170px;
     margin: 0 auto;
     position: relative;
+}
+.card  > a {
+    color: black;
+    text-decoration: none;
+
 }
 /* CONTATO */
 
